# Gravitational_Rogatka

./: README.md  buildozer.spec  center.kv  euler.py  interaction.py  main.py  pyproject.toml  variables.py
