[tool.poetry]
name = "repl_python3_Gravitational-Rogatka"
version = "0.1.0"
description = ""
authors = ["K0nek0 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
